--- a/style.css
+++ b/style.css
@@ -27,3 +27,25 @@ h1{
 .chamada-texto{
     margin-right: 5px;
 }
+
+.categoria{
+    padding-left: 20px;
+    padding-right: 20px;
+    margin-top: 50px;
+}
+
+.categoria-videos{
+    display: flex;
+    overflow-x:auto;
+    gap: 20px;
+}
+
+.categoria-video img{
+height: 200px;
+opacity: 0.5;
+}
+
+.categoria-video img :hover{
+    opacity: 1.0;
+    border: 3px solid rgb(129, 20, 20);
+}
